:sparkles: add pagination to getCars API endpoint
